--- a/casoOne/pom.xml
+++ b/casoOne/pom.xml
@@ -55,6 +55,15 @@
 			<version>9.0.0</version>
 		</dependency>
 
+		<!--
+		https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>3.3.3</version>
+		</dependency>
+
+
 
 	</dependencies>
 
