--- a/casoOne/src/main/resources/application.properties
+++ b/casoOne/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=casoOne
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/es_act1
+spring.datasource.username=root
+spring.datasource.password=rootBBDD2024
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
