--- a/casoOne/pom.xml
+++ b/casoOne/pom.xml
@@ -60,10 +60,14 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			<version>3.3.3</version>
+			<!-- <version>3.3.3</version> -->
 		</dependency>
 
-
+		<dependency> 
+			<groupId>javax.xml.bind</groupId> 
+			<artifactId>jaxb-api</artifactId> 
+			<version>2.3.0</version> 
+</dependency>
 
 	</dependencies>
 
